# ChangeLog for media-tv/freevo
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-tv/freevo/ChangeLog,v 1.47 2007/07/02 15:20:44 peper Exp $

  02 Jul 2007; Piotr Jaroszyński <peper@gentoo.org> freevo-1.5.4.ebuild,
  freevo-1.5.4-r2.ebuild, freevo-1.6.0.ebuild, freevo-1.6.1.ebuild:
  (QA) RESTRICT clean up.

  11 May 2007; Thilo Bangert <bangert@gentoo.org> metadata.xml:
  fix herd

  22 Apr 2007; Christian Heim <phreak@gentoo.org> freevo-1.5.4.ebuild,
  freevo-1.5.4-r2.ebuild, freevo-1.6.0.ebuild, freevo-1.6.1.ebuild:
  Use newconfd/newinitd for #174266; Properly quote variables.

  19 Mar 2007; Marius Mauch <genone@gentoo.org> freevo-1.5.4.ebuild,
  freevo-1.5.4-r2.ebuild, freevo-1.6.0.ebuild, freevo-1.6.1.ebuild:
  Replacing einfo with elog

  31 Dec 2006; Steve Dibb <beandog@gentoo.org> freevo-1.5.4.ebuild,
  freevo-1.5.4-r2.ebuild, freevo-1.6.0.ebuild, freevo-1.6.1.ebuild:
  Check for sdl-image + png use flag, bug 159464

*freevo-1.6.1 (04 Dec 2006)

  04 Dec 2006; Matteo Azzali <mattepiu@gentoo.org> +freevo-1.6.1.ebuild:
  Version bump as per bug #156803, thanks to Benjamin Schleinzer.

  23 Nov 2006; Matteo Azzali <mattepiu@gentoo.org> freevo-1.6.0.ebuild:
  Fixed mmpython dependancy as per bug #155835.Thanks to Frittella Laurento

*freevo-1.6.0 (01 Nov 2006)

  01 Nov 2006; Matteo Azzali <mattepiu@gentoo.org> +freevo-1.6.0.ebuild:
  Version bump, bug #153447. Thanks to Benjamin Schleinzer

  25 Oct 2006; Matteo Azzali <mattepiu@gentoo.org> -freevo-1.5.4-r1.ebuild:
  removed as -r2 is fixed version.

*freevo-1.5.4-r2 (24 Oct 2006)

  24 Oct 2006; Matteo Azzali <mattepiu@gentoo.org> +freevo-1.5.4-r2.ebuild:
  Fixed freevoboot install, corrected some english.

*freevo-1.5.4-r1 (19 Oct 2006)

  19 Oct 2006; Matteo Azzali <mattepiu@gentoo.org> +files/freevo.boot,
  +freevo-1.5.4-r1.ebuild:
  Removed initscript changed boot method per security bug #150568.