@@ -9,6 +9,10 @@ AUX freevo.conf 1265 RMD160 3a64dbd4f6978ff77780c2cfb663e4937e0f84e3 SHA1 c4251e
 MD5 059b24952b8a2cc20aca4572f32a6630 files/freevo.conf 1265
 RMD160 3a64dbd4f6978ff77780c2cfb663e4937e0f84e3 files/freevo.conf 1265
 SHA256 c74b609e3b1177cbbbd3ca507e65b5392eed18fcd488e327c63478664fbd6143 files/freevo.conf 1265
+AUX freevo.desktop 126 RMD160 bab4ae937c10d2a1d895bfadefa80d999a979692 SHA1 e95ffdb2605fd9679a304161bb0f39f3a339b8fc SHA256 9553d646d154710af8d22b300c5a792433fad47efcd75224f416c46cd45e03e4
+MD5 0b8fbcf7d8d918551b4211c3d9222260 files/freevo.desktop 126
+RMD160 bab4ae937c10d2a1d895bfadefa80d999a979692 files/freevo.desktop 126
+SHA256 9553d646d154710af8d22b300c5a792433fad47efcd75224f416c46cd45e03e4 files/freevo.desktop 126
 AUX freevo.rc6 1709 RMD160 490c9e87bf32c6becdba09c91d8370906df9c873 SHA1 ea3282141b788d09b8cc4bf06e88a72cb4771dad SHA256 5c660c29e212d1828b8596047c962622627c7733bee9faf77d829eb502b28341
 MD5 b4b9c96e219591f94f781cbb7e023333 files/freevo.rc6 1709
 RMD160 490c9e87bf32c6becdba09c91d8370906df9c873 files/freevo.rc6 1709
@@ -20,6 +24,7 @@ SHA256 91e726a9a99c705067931d1361352a8200a03cebb0d9e1e79187098ae1dd1070 files/xb
 DIST freevo-1.5.4.tar.gz 4425484 RMD160 a5538af486ce6926f57f40abd90a7f655137f225 SHA1 dc8611e6af2bb09bfebc56b02c9784e305160a2f SHA256 d9a7c9455a94c281acb8c5e3f0fc68e4289af7a557af413db2244a254dd48090
 DIST freevo-1.6.0.tar.gz 12996075 RMD160 99c38a99f49bac8b5bb69a30e6b2298fb6bf27f5 SHA1 570a01bb5fdc3ad47bb1f68a4c0ec8ef5ed5bccc SHA256 3204ede221f37a72c326b28d403a6b5acead084adeb6cb0ee950c7efaa441150
 DIST freevo-1.6.1.tar.gz 13024966 RMD160 814d28f9057228af659e2d386db70299f5c249be SHA1 eb3fe72edc988b57f0bf5ecf63ff2b6ceb9dd268 SHA256 8e18aa169c0b6031e6ff798403db1fcd91ecfee0c5e638e7c09ac1b04e8832e3
+DIST freevo-1.7.2.tar.gz 16225723 RMD160 e3d793eb55c8f14291a8c3d843b76181521d9b8f SHA1 8a7662ed7a9748b2b98ac4d691d209906b114bb6 SHA256 305a11be94cc354bc98ae56afefd7155df6fc533a2439d8daa05efe05c62a6aa
 EBUILD freevo-1.5.4-r2.ebuild 5644 RMD160 d111f0994855d2fc253446077bc13c6479ea6122 SHA1 720098c529cca21ed4b952316909824aa3b4284a SHA256 0b98dda9bfc44d07a9dfb2c2f8595facd02319790cef01ef80dbdf36b326620c
 MD5 cf4c4034c2ec528adfd3aed23384739a freevo-1.5.4-r2.ebuild 5644
 RMD160 d111f0994855d2fc253446077bc13c6479ea6122 freevo-1.5.4-r2.ebuild 5644
@@ -36,14 +41,18 @@ EBUILD freevo-1.6.1.ebuild 6013 RMD160 5dc130a6b2b2df87f16771123012a4a6ed660422 
 MD5 d7a423a8d7a29208e7bcd69244e989eb freevo-1.6.1.ebuild 6013
 RMD160 5dc130a6b2b2df87f16771123012a4a6ed660422 freevo-1.6.1.ebuild 6013
 SHA256 36f053888cdca16ddb25dd7346e7084d905b590741077f968715f463ea515559 freevo-1.6.1.ebuild 6013
-MISC ChangeLog 7497 RMD160 06f26ae3366df2267c4fd7650d9331c8c4a4d01b SHA1 f1e0f8abd7e3d3b537d5aae86ab5ce260cd028ec SHA256 2d452f2c97d284a49af9150bd6c18c17a55e032cde27511f63043a1e83e90113
-MD5 96906a9f86d28b84380bc36629bdb942 ChangeLog 7497
-RMD160 06f26ae3366df2267c4fd7650d9331c8c4a4d01b ChangeLog 7497
-SHA256 2d452f2c97d284a49af9150bd6c18c17a55e032cde27511f63043a1e83e90113 ChangeLog 7497
-MISC metadata.xml 223 RMD160 4dc2d6c784150cba2c4ab75f6f165a60ec19c5c1 SHA1 70b5f1a762b5af40b607d4b267519fd52fd074aa SHA256 f887fd242c1bf653530a1ce691ccee19a6a033a4a18de8576f856cd94bd7e440
-MD5 e1872698fea7e54371990e7af3adabef metadata.xml 223
-RMD160 4dc2d6c784150cba2c4ab75f6f165a60ec19c5c1 metadata.xml 223
-SHA256 f887fd242c1bf653530a1ce691ccee19a6a033a4a18de8576f856cd94bd7e440 metadata.xml 223
+EBUILD freevo-1.7.2.ebuild 6534 RMD160 0a5e07b5a671d7b978c5088936cd9f9fbac13c14 SHA1 cc0b702db97a05b5de6a349d594a50d400a5575a SHA256 8d79b89c9277081accd618caa56452378bc5b442e60233e329ca98ab269f2848
+MD5 51acdcce57e91f271a985bee7dda9912 freevo-1.7.2.ebuild 6534
+RMD160 0a5e07b5a671d7b978c5088936cd9f9fbac13c14 freevo-1.7.2.ebuild 6534
+SHA256 8d79b89c9277081accd618caa56452378bc5b442e60233e329ca98ab269f2848 freevo-1.7.2.ebuild 6534
+MISC ChangeLog 7826 RMD160 a3a54b8d4132cf6ebbb20d97013c6f9701f2ae53 SHA1 ca0faa2a12178bc1c9de236856e346d71e0ace4e SHA256 fdc1e3ccd4bffd87bc237add03b5b3354c02abe7af5600fcbd56d2adb27e87cd
+MD5 ac0322184ccfd19eb22b9fed67f42582 ChangeLog 7826
+RMD160 a3a54b8d4132cf6ebbb20d97013c6f9701f2ae53 ChangeLog 7826
+SHA256 fdc1e3ccd4bffd87bc237add03b5b3354c02abe7af5600fcbd56d2adb27e87cd ChangeLog 7826
+MISC metadata.xml 874 RMD160 517bdf63bdcbeaea69e645ac567ca3898c2084ad SHA1 fadd92b90288d4db063ba195a2395e0c0d31baf1 SHA256 299bf14ca6be1c221e6be86ecdb33926baae4ba8823f0dfc48e6e204f47fd2e5
+MD5 287d2798a03150f9c16d5ed9a8789913 metadata.xml 874
+RMD160 517bdf63bdcbeaea69e645ac567ca3898c2084ad metadata.xml 874
+SHA256 299bf14ca6be1c221e6be86ecdb33926baae4ba8823f0dfc48e6e204f47fd2e5 metadata.xml 874
 MD5 184c875557413ec1c5bc7072ae220c39 files/digest-freevo-1.5.4 241
 RMD160 61eb8204602ac4fd0bb46cc27fb1c72cee1fa47a files/digest-freevo-1.5.4 241
 SHA256 fffc92b576365886ae6b20c7f3c8a720461e55563ad628c05c16121f3db54a97 files/digest-freevo-1.5.4 241
@@ -56,10 +65,13 @@ SHA256 a6df31f442ff27ea643029a2a64ed6b54fffe568beb8a607b392ad42d2e0347b files/di
 MD5 8f5c6d7c4a814db227ed5489575f0231 files/digest-freevo-1.6.1 244
 RMD160 30200fe17513380a9325696432d5cac2023ad8d3 files/digest-freevo-1.6.1 244
 SHA256 bcdb212cb59903d90aba1ad0b6a7b262fd85a7d19c9903a01763e848be01085b files/digest-freevo-1.6.1 244
+MD5 2f72947a1cdf99f1ce25c67d127aedf1 files/digest-freevo-1.7.2 244
+RMD160 b421ee7fe036704045bffbaf3db74345b59c8d0a files/digest-freevo-1.7.2 244
+SHA256 687b8792aac9366da44493e4afcaccfe906e92e666bea3e78230177fd901326d files/digest-freevo-1.7.2 244
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.4 (GNU/Linux)
+Version: GnuPG v1.4.7 (GNU/Linux)
 
-iD8DBQFGiRfTppoStNGKGywRAryEAJ950bLnwRyubwUAGys1uaGC7vzEowCfeZZG
-7HxwMKIqweqwdOpV24jgKWo=
-=Nm/6
+iD8DBQFGmnKfyZx3L/ph1soRAgasAKDjHVsCr5I8ExqsZGRV7EAZ2qqqGQCgw31/
+0UGOoE4R5Mh8RD/i8VWec9M=
+=xQJz
 -----END PGP SIGNATURE-----
