@@ -1,0 +1,3 @@
+MD5 1c05c080cd89d70e07e393f74aaa1730 freevo-1.7.2.tar.gz 16225723
+RMD160 e3d793eb55c8f14291a8c3d843b76181521d9b8f freevo-1.7.2.tar.gz 16225723
+SHA256 305a11be94cc354bc98ae56afefd7155df6fc533a2439d8daa05efe05c62a6aa freevo-1.7.2.tar.gz 16225723
