@@ -1,8 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>no-herd</herd>
-<maintainer>
-	<email>mattepiu@gentoo.org</email>
-</maintainer>
+	<herd>media-tv</herd>
+	<maintainer>
+		<email>ian@syndicated-productions.com</email>
+		<name>Ian Stakenvicius</name>
+		<description>Proxy maintaining through rbu</description>
+	</maintainer>
+	<maintainer>
+		<email>rbu@gentoo.org</email>
+		<name>Robert Buchholz</name>
+	</maintainer>
+	<longdescription>Freevo is an open-source home theatre PC platform based
+		on Linux and a number of open-source audio/video tools. MPlayer
+		and/or Xine can be used to play audio and video files in most
+		popular formats. Freevo can be used both for a standalone PVR
+		computer with a TV+remote, as well as on a regular desktop
+		computer using the monitor and keyboard.  It is mostly written
+		in the Python programming language.
+	</longdescription>
 </pkgmetadata>
